--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,6 +133,9 @@ main::-webkit-scrollbar-thumb:hover {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+  .theme {
+    --animate-rippling: rippling var(--duration) ease-out;
+  }
 }
 
 @layer base {
@@ -141,5 +144,17 @@ main::-webkit-scrollbar-thumb:hover {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@theme inline {
+  @keyframes rippling {
+  0% {
+    opacity: 1;
+    }
+  100% {
+    transform: scale(2);
+    opacity: 0;
+    }
   }
 }
