--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,46 +19,27 @@ body {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
 
+/* Remove scrollbar but keep functionality */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
 /* Ensure the page takes up at least the full viewport height */
 html,
 body {
   height: 100%;
-  overflow: hidden;
 }
 
 /* Allow scrolling on the main content area */
 main {
   height: 100vh;
   overflow-y: auto;
-}
-
-/* Custom scrollbar styles */
-main::-webkit-scrollbar {
-  width: 8px;
-}
-
-main::-webkit-scrollbar-track {
-  background: #2d3748;
-}
-
-main::-webkit-scrollbar-thumb {
-  background-color: #4a5568;
-  border-radius: 4px;
-}
-
-main::-webkit-scrollbar-thumb:hover {
-  background-color: #718096;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.hide-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
 }
 
 @keyframes spin {
@@ -149,12 +130,12 @@ main::-webkit-scrollbar-thumb:hover {
 
 @theme inline {
   @keyframes rippling {
-  0% {
-    opacity: 1;
+    0% {
+      opacity: 1;
     }
-  100% {
-    transform: scale(2);
-    opacity: 0;
+    100% {
+      transform: scale(2);
+      opacity: 0;
     }
   }
 }
